chore: fixed layout issues on the profile section

--- a/packages/main/src/components/protected/sidebar/styles/Sidebar.module.css
+++ b/packages/main/src/components/protected/sidebar/styles/Sidebar.module.css
@@ -64,6 +64,7 @@
   padding: 18px 20px;
   background-color: #00b87c;
   color: #fff;
+  z-index: 0;
 }
 
 .orgInfo {
